--- a/library.css
+++ b/library.css
@@ -63,7 +63,7 @@
 
 .search-bar {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     position: relative; /* For positioning the X button */
     width: 100%; /* Ensure this div takes full width of its parent (which is now responsive) */
 }
@@ -71,7 +71,7 @@
 #library-search {
     flex-grow: 1; /* Allows the input to take available space */
     padding-right: 30px; /* Make space for the X button */
-    padding: 1rem;
+    padding: 0 1rem;
     border: 1px solid var(--secondary);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -82,7 +82,8 @@
 
 #x-btn { /* This targets the 'X' button */
     position: absolute;
-    right: 140px; /* Adjust this value to position the X button inside the input field, accounting for the "Search" button */
+    right: 150px; /* Adjust this value to position the X button inside the input field, accounting for the "Search" button */
+    top: 20px;
     background: none;
     border: none;
     cursor: pointer;
@@ -97,7 +98,7 @@
 }
 
 #library-search-btn {
-    padding: 18px 2rem;
+    padding: 1.2rem 2rem;
     background-color: var(--primary);
     color: white;
     font-size: 1.1rem;
@@ -135,6 +136,13 @@
 }
 
 /* Modal Content */
+.modal-heading {
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'EB Garamond', serif;
+    margin-bottom: 2rem;
+}
+
 .modal-content {
   background-color: white;
   margin: auto;
@@ -144,20 +152,30 @@
   width: 80%;
 }
 
+.modal-content ul {
+    margin-left: 1.3rem;
+    list-style-type: circle;
+}
+.modal-content li {
+    font-family: 'Lato', sans-serif;
+    padding-bottom: 1rem;
+}
+
 /* The Close Button */
 .search-help-btn-close {
-  color: var(--tertiary);
+  color: white;
+  background-color: var(--secondary);
+  border-radius: 7px;
   float: right;
   font-size: 28px;
   font-weight: bold;
-  border: 3px solid var(--tertiary);
   padding: 0 6px;
 }
 
 .search-help-btn-close:hover,
 .search-help-btn-close:focus {
-  color: #000;
-  border: 3px solid #000;
+  color: white;
+  background-color: var(--tertiary);
   text-decoration: none;
   cursor: pointer;
 }
@@ -227,7 +245,7 @@
     margin-left: auto;
     margin-bottom: 1rem;
     width: fit-content;
-    background-color: var(--warmgray);
+    background-color: var(--secondary);
     color: white;
     border: none;
     padding: 5px;
@@ -248,6 +266,19 @@
     user-select: none; /* Prevent text selection on double-click */
 }
 
+.accordion-icon {
+    font-size: 1.2em; 
+    display: inline-block; 
+    transition: transform 0.3s ease; 
+    margin-left: 5px; 
+    transform-origin: center; 
+}
+
+/* The class to trigger the rotation */
+.facet-accordion-header.active .accordion-icon {
+    transform: rotate(45deg); 
+}
+
 .facet-accordion-header:hover {
     text-decoration: underline;
 }
@@ -256,7 +287,7 @@
     max-height: 0;
     overflow: hidden; /* Important for the transition and for hiding overflow when closed */
     transition: max-height 0.3s ease-out, padding 0.3s ease-out;
-    padding: 0 10px;
+    padding: 0;
     box-sizing: border-box; 
     position: relative; 
 }
@@ -264,23 +295,24 @@
 .facet-accordion-content.active {
     max-height: 300px;
     overflow-y: auto; /* Adds scrollbar when content exceeds max-height */
-    padding: 35px 10px; /* Adjust if needed to ensure space for buttons */
+    padding: 0; /* Adjust if needed to ensure space for buttons */
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     color: var(--primary);
+    border-bottom: 1px solid var(--lightgray);
 }
 
 
 /* Styles for the sort buttons container */
 .sort-buttons {
-    position: absolute; /* Position relative to .facet-accordion-content */
-    top: 5px; /* Distance from the top of the .facet-accordion-content */
-    right: 10px; /* Distance from the right of the .facet-accordion-content (matches its padding) */
-    display: flex; /* Arrange buttons side-by-side */
-    gap: 5px; /* Space between A-Z and 1-9 buttons */
-    z-index: 10; /* Ensure buttons are layered above other content if there's overlap */
+    position: sticky;
+    top: 0; 
+    text-align: right;
+    z-index: 10; 
+    background-color: white; 
+    padding: 5px 20px 5px 0; 
 }
 
 .sort-btn {
@@ -303,9 +335,14 @@
     border-color: var(--primary);
 }
 
+.facet-list-scroll-container {
+    padding: 5px 10px 0 10px;
+}
+
 .facet {
     background-color: transparent;
     border: none;
+    text-align: left;
     padding: 0;
     color: var(--primary);
 }
@@ -313,9 +350,6 @@
 .facet:hover, .facet.active {
     color: var(--tertiary);
 }
-
-
-
 
 
 
@@ -395,3 +429,37 @@
 /* .resource-panel.active {
     max-height: none !important;
 } */
+#loadMore {
+    color: white;
+    font-family: 'Lato', sans-serif;
+    padding: 10px 0;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--primary);
+    cursor: pointer;
+}
+
+#loadMore:hover {
+    background-color: var(--light-primary);
+}
+
+.top-button {
+  display: none; 
+  position: fixed;
+  bottom: 50px; 
+  right: 30px; 
+  z-index: 99;
+  border: none; 
+  outline: none; 
+  background-color: var(--primary); 
+  color: white; 
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 10px; 
+  font-size: 1.5rem !important;
+}
+
+.top-button:hover {
+    background-color: var(--light-primary);
+}
