--- a/library.css
+++ b/library.css
@@ -71,17 +71,17 @@
     display: flex;
     align-items: stretch;
     position: relative; /* For positioning the X button */
-    width: 100%; /* Ensure this div takes full width of its parent (which is now responsive) */
+    width: 110%; 
 }
 
 #library-search {
-    flex-grow: 1; /* Allows the input to take available space */
+    flex-grow: 1;
     padding-right: 30px; /* Make space for the X button */
     padding: 0 1rem;
     border: 1px solid var(--secondary);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    min-width: 150px; /* Ensure the input itself doesn't become too small */
+    min-width: 150px; 
     font-size: 18px;
     font-family: 'Lato', sans-serif;
 }
@@ -117,9 +117,10 @@
 
 #search-help-btn {
     border: none;
+    background-color: transparent;
     font-size: 1.7rem;
     color: var(--primary);
-    padding-left: 20px;
+    margin-left: 20px;
 }
 
 #search-help-btn:hover {
@@ -169,19 +170,15 @@
 
 /* The Close Button */
 .search-help-btn-close {
-  color: white;
-  background-color: var(--secondary);
-  border-radius: 7px;
+  color: var(--secondary);
   float: right;
   font-size: 28px;
   font-weight: bold;
-  padding: 0 6px;
 }
 
 .search-help-btn-close:hover,
 .search-help-btn-close:focus {
-  color: white;
-  background-color: var(--tertiary);
+  color: var(--tertiary);
   text-decoration: none;
   cursor: pointer;
 }
@@ -299,7 +296,7 @@
     transform-origin: center; 
 }
 
-/* The class to trigger the rotation */
+/* + -> x rotation */
 .facet-accordion-header.active .accordion-icon {
     transform: rotate(45deg); 
 }
@@ -310,7 +307,7 @@
 
 .facet-accordion-content {
     max-height: 0;
-    overflow: hidden; /* Important for the transition and for hiding overflow when closed */
+    overflow: hidden;
     transition: max-height 0.3s ease-out, padding 0.3s ease-out;
     padding: 0;
     box-sizing: border-box; 
@@ -319,8 +316,8 @@
 
 .facet-accordion-content.active {
     max-height: 300px;
-    overflow-y: auto; /* Adds scrollbar when content exceeds max-height */
-    padding: 0; /* Adjust if needed to ensure space for buttons */
+    overflow-y: auto; 
+    padding: 0; 
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -386,6 +383,7 @@
 
 #close-facets-btn {
     background-color: transparent;
+    font-size: 28px;
     cursor: pointer;
     border: none;
     color: white;
@@ -420,13 +418,16 @@
         display: none;
         position: fixed;
         z-index: 100;
-        top: 50px;
+        top: 0;
         left: 0;
+        width: 100%; /* Occupy full width */
+        height: 100%; /* Occupy full height */
         transition: 0.5s;
-        /* display: none; */
         flex: none;
-        max-width: 400px;
-        max-height: none;
+        max-width: none; /* Remove max-width constraint */
+        max-height: none; /* Remove max-height constraint */
+        overflow-y: auto; /* Use 'auto' to enable scrolling when content overflows */
+        background-color: white; /* Add a background color to the facets panel */
     }
 }
 
@@ -436,8 +437,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-    z-index: 98; /* Make sure it's on top of everything except the facets panel */
+    background-color: rgba(0, 0, 0, 0.7); 
+    z-index: 98; 
     display: none; 
     transition: opacity 0.3s ease;
     opacity: 0;
@@ -521,9 +522,7 @@
     flex-direction: column;
     gap: 20px;
 }
-/* .resource-panel.active {
-    max-height: none !important;
-} */
+
 #loadMore {
     color: white;
     font-family: 'Lato', sans-serif;
