--- a/library.css
+++ b/library.css
@@ -129,20 +129,32 @@
 
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 10px; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
 }
 
 /* Modal Content */
+
+.modal-content {
+    max-height: 90vh; 
+    overflow-y: auto;
+    background-color: white;
+    margin: auto;
+    padding: 2rem;
+    border: 10px solid var(--secondary);
+    color: black;
+    width: 80%;
+}
+
 .modal-heading {
     text-align: center;
     font-size: 2rem;
@@ -150,22 +162,20 @@
     margin-bottom: 2rem;
 }
 
-.modal-content {
-  background-color: white;
-  margin: auto;
-  padding: 2rem;
-  border: 10px solid var(--secondary);
-  color: black;
-  width: 80%;
+.modal-content h3 {
+    font-family: 'Lato', sans-serif;
+    font-size: 1.3rem;
+    margin: 1rem 0 0.5rem 0;
 }
-
 .modal-content ul {
     margin-left: 1.3rem;
     list-style-type: circle;
+    padding-left: 1.7rem;
 }
 .modal-content li {
     font-family: 'Lato', sans-serif;
     padding-bottom: 1rem;
+    font-weight: 100;
 }
 
 /* The Close Button */
