--- a/styles.css
+++ b/styles.css
@@ -790,6 +790,27 @@ main li {
     width: 100%;
 }
 
+.lacli-assets {
+    display: flex;
+    max-width: 700px;
+    margin: 0 auto 4rem auto;
+    align-items: center;
+}
+.lacli-assets-instructions {
+    padding-left: 3rem;
+}
+
+.lacli-assets-instructions p {
+    font-weight: 100;
+    line-height: 1.5;
+    padding-bottom: 1.2rem;
+}
+
+pre {
+    max-width: 700px;
+    margin: 0 auto;
+}
+
 /* ----- HELP ----- */
 
 .help-wrapper {
